# prime-numbers-calc-tdd-practise

./: CMakeLists.txt  CMakePresets.json  Readme.md
PrimeNumber.Core/: CMakeLists.txt
PrimeNumber.Core/include/PrimeNumber.Core/: PrimeNumberCalculator.h
PrimeNumber.Core/src/: PrimeNumberCalculator.cpp
PrimeNumber.UnitTests/: CMakeLists.txt  PrimeNumberUnitTest.cpp
